2010-04-25  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* TimeSpan.cs: Support custom formats in ToString().

2010-04-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Lazy.cs: Include in Moonlight build.

2010-04-22  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* TimeSpan.cs: The final 4.0 release removed the restriction of
	preceding zeroes when parsing, and it also added 't' and 'T' as valid
	formats equivalent to 'c' (default).

2010-04-16 Rodrigo Kumpera  <rkumpera@novell.com>

	* MonoType.cs (GetInterface): Compare against the name
	of the generic type definition.

	Fixes #484246.

2010-04-16 Rodrigo Kumpera  <rkumpera@novell.com>

	* MonoCustomAttrs.cs (GetBasePropertyDefinition): Use
	GetBaseMethod instead of GetMethodDefinition otherwise
	we skip intermediate overloads.

	Fixes #499569.

2010-04-16  Sebastien Pouliot  <sebastien@ximian.com>

	* Environment.cs: Ensure elevated trust when calling
	GetFolderPath on Moonlight

2010-04-16  Sebastien Pouliot  <sebastien@ximian.com>

	* Action.cs: SL4 moved some Action in mscorlib
	* Funcs.cs: SL4 moved some Func<> in mscorlib
	* String.cs: Make IsNullOrWhiteSpace available, internally, 
	before NET_4_0 (or SL4) since it's proving useful.

2010-04-15  Jb Evain  <jbevain@novell.com>

	* Guid.cs: rework the Guid parser to implement the net_4_0
	[Try]ParseExact methods.

2010-04-15  Jérémie Laval  <jeremie.laval@gmail.com>

	* Tuple.cs:
	* Tuples.cs: Add BOOTSTRAP_NET_4_0 define

2010-04-13 Rodrigo Kumpera  <rkumpera@novell.com>

	* MonoCustomAttrs.cs: Raise an exception if the runtime
	returned a null cattr.

2010-04-13  Zoltan Varga  <vargaz@gmail.com>

	* Convert.cs (ToInt32): Do a checked cast. Fixes #596339.

2010-04-12  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* TimeSpan.cs: Implement support for custom formats parsing. This
	should as well include the bits required to easily implement the same
	for ToString methods, when the final release fixes the mess we found
	in the latest beta.
