@@ -1,3 +1,7 @@
+2010-05-06 Rodrigo Kumpera  <rkumpera@novell.com>
+
+	* GC.cs: Add new register_ephemeron_array icall.
+
 2010-04-25  Carlos Alberto Cortez <calberto.cortez@gmail.com>
 
 	* TimeSpan.cs: Support custom formats in ToString().
